--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,12 +3,6 @@
 }
 
 .reveal footer {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  padding-top: 50%;
-  z-index: 1;
   line-height: 0.7;
 }
 
@@ -19,6 +13,32 @@
 .reveal section img {
   border: none;
   box-shadow: none;
+}
+
+.reveal pre {
+  display: block;
+  box-shadow: none;
+}
+
+.reveal pre code {
+  color: #666;
+  background-color: #fff;
+  max-height: none;
+  font-size: 80%;
+  line-height: 1;
+}
+
+.reveal ol {
+  display: block;
+  font-size: 80%;
+}
+
+/* Sections */
+#history-eigenfaces,
+#history-lbp,
+#history-haar
+{
+  text-align: left;
 }
 
 #opencv-title .images img{
@@ -39,15 +59,3 @@
   display: block;
 }
 
-.reveal pre {
-  display: block;
-  box-shadow: none;
-}
-
-.reveal pre code {
-  color: #666;
-  background-color: #fff;
-  max-height: none;
-  font-size: 80%;
-  line-height: 1;
-}
