--- a/views/sections/face_detection.haml
+++ b/views/sections/face_detection.haml
@@ -1,12 +1,37 @@
 %section
   %h2 Face Detection
-  %pre
-    %code.ruby= File.read('../../jaronson/face_match/lib/face_match/detector.rb')
+  %img{ src: '/img/Example_1.png' }
+
+  %footer
+    %cite
+      Dave Parret,
+      <a href="http://www.daveperrett.com/articles/2010/12/14/face-detection-with-osx-and-python/">Face Detection With OS X and Python</a>
 %section
-  %h3 From an Image
+  %h3 Basics
+  .row
+    .span4
+      %ol
+        %li Load an image
+        %li Create a classifier
+        %li Do some fancy math
+        %li Draw some rectangles
+    .span8
+      %pre
+        %code.ruby= File.read('../../jaronson/face_match/examples/01_basics.rb')
+
 %section
-  %h3 From Video
-  %pre
-    %code.ruby= File.read('../../jaronson/face_match/lib/face_match/tracker.rb')
-%section
-  %h3 With Multiple Subjects
+  %h3 Video
+  .row
+    .span4
+      %ol
+        %li Open the video
+        %li Create a classifier
+        %li
+          For each frame
+          %ol
+            %li Do some fancy math
+            %li Draw some rectangles
+        %li Close the video
+    .span8
+      %pre
+        %code.ruby= File.read('../../jaronson/face_match/examples/02_video.rb')
