Update face recognition section

--- a/views/sections/face_recognition.haml
+++ b/views/sections/face_recognition.haml
@@ -1,2 +1,7 @@
 %section
   %h2 Face Recognition
+  %img{ src: '/img/face_recognition.jpg' }
+  %footer
+    %cite
+      Melanie Basich,
+      <a href="http://www.policemag.com/channel/technology/articles/2002/10/finding-a-face-in-the-crowd/page/2.aspx">Finding a Face in the Crowd</a>
