--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,12 @@
+.reveal h1,
+.reveal h2,
+.reveal h3,
+.reveal h4,
+.reveal h5,
+.reveal h6 {
+  font-family: "News Cycle", sans-serif;
+}
+
 .reveal section {
   z-index: 100;
 }
