--- a/views/layout.haml
+++ b/views/layout.haml
@@ -24,7 +24,7 @@
       controls: true,
       progress: false,
       history:  true,
-      center:   false,
+      center:   true,
       theme:    'simple'
     });
 
