--- a/views/sections/face_detection.haml
+++ b/views/sections/face_detection.haml
@@ -1,11 +1,5 @@
 %section
-  %h2 Face Detection
-  %img{ src: '/img/Example_1.png' }
-
-  %footer
-    %cite
-      Dave Parret,
-      <a href="http://www.daveperrett.com/articles/2010/12/14/face-detection-with-osx-and-python/">Face Detection With OS X and Python</a>
+  %h2 Detection
 %section
   %h3 Basics
   .row
