--- a/views/sections/history.haml
+++ b/views/sections/history.haml
@@ -1,20 +1,15 @@
 %section
   %h2 A Brief History of Face Detection
-  %img{ src: '/img/Example_6.png' }
-  %footer
-    %cite
-      Dave Perret,
-      <a href="http://www.daveperrett.com/images/articles/2010-12-14-face-detection-with-osx-and-python/Example_6.png">Face Detection With OS X and Python</a>
 
 %section
   %h3 1964: Origins
-  %p
-    Attempt to identify faces using normalized lengths between points and ratios of distances among facial
-    landmarks such as eyes, mouth, nose and chin.
-
-  %p
-    These methods proved fragile due not only to then-limited processing but also under
-    variant head tilt, rotation, lighting and scale.
+  .row
+    .span8
+      %p
+        Attempt to identify faces using normalized lengths between points and ratios of distances among facial
+        landmarks such as eyes, mouth, nose and chin.
+    .span4
+      %img{ src: '/img/facerec.png' }
 
   %footer
     %cite
