--- a/views/sections/opencv.haml
+++ b/views/sections/opencv.haml
@@ -2,9 +2,6 @@
   %h2 OpenCV
   %h3 and Ruby
 
-  .images
-    %img{ src: 'img/opencv_logo.svg' }
-    %img{ src: 'img/ruby_logo.svg' }
 %section
   %h3 OpenCV
   %p
@@ -37,7 +34,7 @@
     .span6
       %br
       %span <strong>Good:</strong> always up-to-date with core, fast
-      %span <strong>Bad:</strong> much that doesn't resemble ruby as you and I know it
+      %span <strong>Bad:</strong> doesn't resemble ruby, unforgivingly tedious to work with
   .row
     .span6
       %strong opencv-ffi
