--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,7 @@
+.reveal .slides > section, .reveal .slides > section > section {
+  padding-top: 0;
+}
+
 .reveal h1,
 .reveal h2,
 .reveal h3,
@@ -35,6 +39,7 @@
   max-height: none;
   font-size: 80%;
   line-height: 1;
+  overflow: hidden;
 }
 
 .reveal ol {
@@ -58,13 +63,18 @@
   margin-right: 10%;
 }
 
-#opencv-ruby-wrappers .row {
+#opencv-ruby-wrappers .row,
+#face-recognition-training .row
+{
   text-align: left;
   margin-bottom: 2rem;
 }
 
-#opencv-ruby-wrappers a, #opencv-ruby-wrappers span{
+#opencv-ruby-wrappers a,
+#face-recognition-training a,
+#opencv-ruby-wrappers span,
+#face-recognition-training span
+{
   font-size: 60%;
   display: block;
 }
-
