--- a/views/sections/about.haml
+++ b/views/sections/about.haml
@@ -8,3 +8,4 @@
     %li Type 84 words per minute, error-free.
     %li Coined the term <em>filandering</em>, which refers to a specific domain of phishing attacks.
     %li Led software development for brand names like The Week, Dell, Unisys, AirBnb, and Wipro.
+    %li Currently in the Mid-States Art Exhibition; art has informed my work with CV.
