--- a/views/sections/history.haml
+++ b/views/sections/history.haml
@@ -1,7 +1,7 @@
 %section
   %h2 A Brief History of Face Detection
 
-%section
+%section#history-origins
   %h3 1964: Origins
   .row
     .span8
@@ -9,7 +9,7 @@
         Attempt to identify faces using normalized lengths between points and ratios of distances among facial
         landmarks such as eyes, mouth, nose and chin.
     .span4
-      %img{ src: '/img/facerec.png' }
+      %img{ src: '/img/facialrecognition.jpg' }
 
   %footer
     %cite
