--- a/views/sections/social.haml
+++ b/views/sections/social.haml
@@ -5,3 +5,15 @@
     by Snowden, Greenwald &amp; Poitras, et. al. (2013 - Present),
     I Am Pleased That This Is So Trivially Accomplished and Eagerly Await
     Forthcoming Developments in the Area of Face Detection &amp; Recognition
+
+%section
+  %h3 Imagine a machine that could tell your age, sex, race, and a whole host of attributes just by looking at you.
+
+%section#race-detect
+  .boxes
+    .box.white
+    .box.black
+    .box.brown
+    .box.yellow
+    .box.red
+    .box.violet
