Update code paths, readme

--- a/views/sections/face_detection.haml
+++ b/views/sections/face_detection.haml
@@ -11,7 +11,7 @@
         %li Draw some rectangles
     .span8
       %pre
-        %code.ruby= File.read('../../jaronson/face_match/examples/01_basics.rb')
+        %code.ruby= File.read('../rb-racedetect/examples/01_basics.rb')
 
 %section
   %h3 Video
@@ -28,4 +28,4 @@
         %li Close the video
     .span8
       %pre
-        %code.ruby= File.read('../../jaronson/face_match/examples/02_video.rb')
+        %code.ruby= File.read('../rb-racedetect/examples/02_video.rb')
