--- a/views/sections/face_recognition.haml
+++ b/views/sections/face_recognition.haml
@@ -31,4 +31,4 @@
             %li Maybe update the recognizer?
     .span8
       %pre
-        %code.ruby= File.read('../../jaronson/face_match/examples/03_recognition.rb')
+        %code.ruby= File.read('../rb-racedetect/examples/03_recognition.rb')
