--- a/views/sections/opencv.haml
+++ b/views/sections/opencv.haml
@@ -47,12 +47,12 @@
 %section
   %p ruby-opencv
   %pre
-    %code.ruby= File.read('../../jaronson/face_match/bin/ruby-opencv-track')
+    %code.ruby= File.read('../rb-racedetect/bin/ruby-opencv-track')
 
 %section
   %p ropencv
   %pre
-    %code.ruby= File.read('../../jaronson/face_match/bin/ropencv-track')
+    %code.ruby= File.read('../rb-racedetect/bin/ropencv-track')
 
 %section
   %h3 The Verdict
