Update history, examples

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -51,7 +51,8 @@
 #history-origins,
 #history-eigenfaces,
 #history-lbp,
-#history-haar
+#history-haar,
+#history-present
 {
   text-align: left;
 }
