--- a/views/sections/history.haml
+++ b/views/sections/history.haml
@@ -57,8 +57,7 @@
   %h3 2001: Haar Cascades
   .row
     .span6
-      %p
-        Developed a learning algorithm to select key features and the subsequent application of classifiers in increasing complexity.
+      %p Developed a learning algorithm to select key features and the subsequent application of classifiers in increasing complexity.
     .span6
       %img{ src: '/img/haar_cascade.png' }
   %footer
@@ -67,4 +66,16 @@
     %br
     %cite
       G. Borenstein, <a href="https://github.com/atduskgreg/Makematics/blob/master/research/haar_detection/index.md">Adam Harvey Explains Haar Detection</a>
+
+%section#history-present
+  %h3 2008 - Present: Multiplication, 3D Detection
+  .row
+    .span12
+      %p
+        Combination of pattern descriptors to broaden coverage of information domain.
+        Emerging 3D recognition looks to surpass 2D recognition rates.
+  %footer
+    %cite
+      J. Chen <a href="https://encrypted.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=2&cad=rja&uact=8&ved=0CCwQFjAB&url=http%3A%2F%2Fwww.jdl.ac.cn%2Fuser%2Fsgshan%2Fpub%2FCVPR08_JChen_Print.pdf&ei=GUQdVcnqM4jDggTivoSgBQ&usg=AFQjCNEXIjrtlB_5u5P44NMqDQyyKCOK1A&sig2=YynX9qxP-H33n4TOkL_UsA&bvm=bv.89744112,d.eXY">A Robust Descriptor based on Weber's Law</a>
+      G. Muhammad <a href="https://encrypted.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=0CB4QFjAA&url=http%3A%2F%2Fwww.cse.unr.edu%2F~bebis%2FIJAIT12_Race.pdf&ei=4EUdVZ-BIcW5ggTD_oCADA&usg=AFQjCNEELx-bzbfDTuem5WLP3XwLVouESw&sig2=TsSJ1klwvY7tS3jOGpV_2g&bvm=bv.89744112,d.eXY">Race Classification from Face Images Using Local Descriptors</a>
 
