--- a/views/sections/opencv.haml
+++ b/views/sections/opencv.haml
@@ -56,7 +56,8 @@
 
 %section
   %h3 The Verdict
-  %p <strong>Python</strong>
+%section
+  %h3 Python
 
   %p
     The python bindings are managed by the core maintainers,
